--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
     "express": "^4.18.3",
+    "jquery": "^3.7.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
